--- a/initial-conf/www/gui.css
+++ b/initial-conf/www/gui.css
@@ -290,6 +290,43 @@ a {
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
+.wizheader {
+	border-right: 1px solid #999999;
+	text-align: center;
+        font-size: 25px;
+	background-color: #435370;
+	padding-right: 16px;
+	padding-left: 6px;
+	color: #FFFFFF;
+	font-weight: bold;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.wizfooter {
+	position: fixed;
+        bottom: 6px;
+        width: 93.5%;
+        border-right: 1px solid #999999;
+	text-align: center;
+        font-size: 9px;
+	background-color: #435370;
+	padding-right: 16px;
+	color: #FFFFFF;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.wiznavbtn {
+	position: fixed;
+        bottom: 30px;
+        width: 93%;
+        border-right: 0px solid #999999;
+	text-align: right;
+        font-size: 9px;
+	padding-right: 16px;
+	color: #FFFFFF;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
 .optsect_t {
 	border-right: 1px solid #999999;
 	background-color: #435370;
