--- a/initial-conf/www/gui.css
+++ b/initial-conf/www/gui.css
@@ -1,5 +1,5 @@
 /*
-	$Id: gui.css,v 1.1.1.1 2008/08/01 07:56:20 root Exp $
+        $Id: gui.css,v 1.1.1.1 2008/08/01 07:56:20 root Exp $
 	part of m0n0wall (http://m0n0.ch/wall)
 	
 	Copyright (C) 2003-2006 Manuel Kasper <mk@neon1.net>.
@@ -27,10 +27,140 @@
 	POSSIBILITY OF SUCH DAMAGE.
 */
 
+img {
+border:0 none;
+}
+
+.left {
+float: left;
+width: 15em;
+}
+
+.containfloat:after {
+clear:both;
+content:".";
+display:block;
+height:0;
+visibility:hidden;
+}
+
+.panel {
+ padding: .35em 0 .35em .4em;
+ background: #deddd9 url(../images/background_panel.gif) repeat-x scroll right bottom; 
+}
+
+.save_config {
+    position:absolute;
+    display:none;
+    background: #FFFFFF;
+    margin-left: -120px;
+    top: 50%;
+    left: 50%;
+    width: 250px;
+    height: 150px;
+    z-index: 1;
+    border: 1px solid #999999;
+}
+
+#webui { width: 100%; padding-bottom: 9em; }
+#header { position: realative; padding: 4px 18px; border-bottom: 1px solid #333; font-size: 90%; }
+    #deviceid { float: left; padding-right: 15px; border-right: 1px dotted #444; }
+    #uptimeload { float: left; padding: 0 15px; border-right: 1px dotted #444; }
+    #userinfo { padding: 0 15px; border-right: 1px dotted #444; }
+    #pingstatus { float: left; padding: 0 15px; border-right: 1px dotted #444; }
+    #partition { float: right; padding: 0 15px; border-left: 1px dotted #444; }
+    #logout { float: right; padding-left: 15px; border-left: 1px dotted #444; }
+#alert { display: none; border-bottom: 1px solid #333; background: #fff9d8; color: #333; text-align: center; }
+#banner { position: realative; padding-top: 15px; padding-bottom: 15px; }
+    #logo { float: none; margin: 0 10px 0px 15px; }
+    #message { display: none; padding: 7px; border: 1px solid #333; border-right: none; background-image: url(../images/backg
+round_black_30.png); }
+    #navbar { clear: both; padding-top: 10px; }
+        #tabs { }
+        #trail { padding: .35em 0 .35em .4em; border: 1px solid #333; background-image: url(../images/background_black_30.png
+); }
+#body { position: fixed; }
+
+#panels { position: relative; z-index: 1; padding: .5em; }
+ 
+/* Header */ 
+#header a:hover { text-decoration: underline; }
+#header span { color: #fff; }
+#deviceid label { float: left; width: 5.75em; }
+#uptimeload label { float: left; width: 4em; }
+#userinfo label { float: left; width: 10em; }
+#pingstatus label { float: left; width: 5em; }
+#partition label { line-height: 2.7em; }
+#logout a { display: block; line-height: 1.7em; margin: .4em 0; padding: 0 1.5em; border: .1em solid #444; background: #66a00d url(../images/background_logout.gif) top left repeat-x; color: #fff; text-shadow: #444 1px 1px 2px; }
+#logout a:hover { border-color: #fc0; text-decoration: none; }
+
+/*  Alert  */
+#alert li { display: block; position: relative; padding: 4px 20px 3px 20px; border-bottom: 1px dotted #d9d0b1; }
+#alert a { color: #36c; }
+#alert a:hover { text-decoration: underline; }
+#alert a.dismiss { position: absolute; top: 50%; right: 10px; margin-top: -6px; }
+
+/*  Banner  */
+#status div { margin-bottom: 3px; padding-left: .5em; border-left: 5px solid #4e5964; font-size: 90%; color: #fff; font-weight: bold; }
+#status div a { color: #fff; }
+#status div a:hover { text-decoration: underline; }
+#status div.none, #status div.none a { color: #b3bbc5; font-weight: bold; }
+#status div.gray { border-color: #bbb; }
+#status div.green { border-color: #9fcf54; }
+#status div.yellow { border-color: yellow; }
+#status div.red { border-color: #f33; }
+#message div.type { position: relative; min-height: 40px; background-repeat: no-repeat; }
+#message div.confirm { background-image: url(../images/banner_confirm.png); }
+#message div.indicator { display: none; position: absolute; top: 0; left: 0; height: 45px; width: 45px; background-repeat: no-repeat; background-position: 13px 16px;}
+#message div.info { background-image: url(../images/banner_info.png); }
+#message div.loading, #message div.saving { background-image: url(../images/banner_device.png); }
+#message div.loading div.indicator { display: block; background-image: url(../images/banner_loading.gif); }
+#message div.saving div.indicator { display: block; background-image: url(../images/banner_saving.gif); }
+#message div.success { background-image: url(../images/banner_success.png); }
+#message div.warning { background-image: url(../images/banner_warning.png); }
+#message div.title { margin-left: 50px; font-weight: bold; color: #fff; }
+#message div.text { margin-top: .5em; margin-left: 50px; color: #ddd; }
+
+/*  Diagnostic Pages  */
+#diagnostics div { display:block; overflow:auto; min-height:600px; min-width:100%; max-height:600px; max-width:100%; color: white; background: black;}
+
+/* Form styles */
+div.form-container { padding: 5px; background-color: #FFF; border: #EEE 1px solid; }
+p.legend { margin-bottom: 1em; }
+p.legend em { color: #C00; font-style: normal; }
+div.errors { margin: 0 0 10px 0; padding: 5px 10px; border: #FC6 1px solid; background-color: #FFC; }
+div.errors p { margin: 0; }
+div.errors p em { color: #C00; font-style: normal; font-weight: bold; }
+div.form-container form p { margin: 0; }
+div.form-container form p.note { margin-left: 170px; font-size: 70%; font-style: italic; color: #333; }
+div.form-container form fieldset { margin: 10px 0; padding: 10px; border: #DDD 1px solid; }
+div.form-container form legend { font-weight: bold; color: #666; }
+div.form-container form fieldset div { padding: 0.5em 0; margin: 0.5em; }
+div.form-container label, 
+div.form-container span.label { margin-right: 10px; padding-right: 10px; width: 150px; display: block; float: left; text-align: right; position: relative; font-size: .9em; font-style: bold;}
+div.form-container label.error, 
+div.form-container span.error { color: #C00; }
+div.form-container label em, 
+div.form-container span.label em { position: absolute; right: 0; font-size: 120%; font-style: normal; color: #C00; }
+div.form-container input.error { border-color: #C00; background-color: #FEF; }
+div.form-container input:focus,
+div.form-container input.error:focus, 
+div.form-container textarea:focus {	background-color: #FFC; border-color: #FC6; }
+div.form-container div.controlset label, 
+div.form-container div.controlset input { display: inline; float: none; }
+div.form-container div.controlset div { margin-left: 170px; }
+
 body,td,th,input,select {
 	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
 	font-size: 11px;
+        margin: 0;
 }
+
+table,tr {
+        padding-left: 2em;
+        width: 80%;
+}
+
 form {
 	margin: 0px;
 }
@@ -48,7 +178,7 @@ p {
 	font-weight: bold;
 }
 .vncell {
-	background-color: #DDDDDD;
+	background-color: #DEDDD9;
 	padding-right: 20px;
 	padding-left: 8px;
 	border-bottom: 1px solid #999999;
@@ -102,7 +232,7 @@ a {
 	text-decoration: none;
 }
 .navlnk {
-	color: #FFFFFF;
+	color: #000000;
 	text-decoration: none;
 	font-size: 13px;
 }
@@ -282,7 +412,7 @@ a {
 .listtopic {
 	border-right: 1px solid #999999;
 	font-size: 11px;
-	background-color: #435370;
+	background-color: #738495;
 	padding-right: 16px;
 	padding-left: 6px;
 	color: #FFFFFF;
@@ -294,7 +424,7 @@ a {
 	POSITION: absolute; 
 	TEXT-ALIGN: center; 
 	PADDING-BOTTOM: 5px; 
-	BACKGROUND-COLOR: #435370; 
+	BACKGROUND-COLOR: #738495; 
 	WIDTH: 565px; 
 	PADDING-RIGHT: 6px; 
 	COLOR: #ffffff; 
@@ -306,7 +436,7 @@ a {
 	POSITION: absolute; 
 	TEXT-ALIGN: center; 
 	PADDING-BOTTOM: 5px; 
-	BACKGROUND-COLOR: #435370; 
+	BACKGROUND-COLOR: #738495; 
 	WIDTH: 565px; BOTTOM: 6px; 
 	PADDING-RIGHT: 6px; 
 	COLOR: #ffffff; 
@@ -329,7 +459,7 @@ a {
 	POSITION: absolute; 
 	TEXT-ALIGN: center; 
 	PADDING-BOTTOM: 5px; 
-	BACKGROUND-COLOR: #435370; 
+	BACKGROUND-COLOR: #738495; 
 	WIDTH: 565px; 
 	PADDING-RIGHT: 6px; 
 	COLOR: #ffffff; 
@@ -341,7 +471,7 @@ a {
 	POSITION: absolute; 
 	TEXT-ALIGN: center; 
 	PADDING-BOTTOM: 5px; 
-	BACKGROUND-COLOR: #435370; 
+	BACKGROUND-COLOR: #738495; 
 	FONT-STYLE: italic; 
 	WIDTH: 565px; 
 	PADDING-RIGHT: 6px; 
@@ -360,10 +490,23 @@ a {
 	TOP: 150px; 
 	PADDING-TOP: 5px
 }
-
+/*  Diagnostic Pages  */
+.livediagdiv { 
+        display:block;
+        overflow:auto;
+        min-width:100%;
+        height:450px;
+        max-width:100%;
+        color: white;
+		background: black;
+		-moz-border-radius-bottomleft:4px;
+		-moz-border-radius-bottomright:4px;
+		-moz-border-radius-topleft:4px;
+		-moz-border-radius-topright:4px;
+}
 .optsect_t {
 	border-right: 1px solid #999999;
-	background-color: #435370;
+	background-color: #738495;
 	padding-right: 6px;
 	padding-left: 6px;
 	padding-top: 2px;
@@ -371,7 +514,7 @@ a {
 }
 .optsect_t2 {
 	border-right: 1px solid #999999;
-	background-color: #435370;
+	background-color: #738495;
 	padding-right: 6px;
 	padding-left: 6px;
 	padding-top: 5px;
@@ -395,7 +538,7 @@ ul#tabnav {
 	padding: 0;
 }
 ul#tabnav li.tabinact1 {
-	float: left;
+	float: none;
 	background-color: #777777;
 	color: #FFFFFF;
 	padding: 0;
